# EmbeddedPack

./: .gitignore  CMakeLists.txt  library.cpp  library.h
Bsp/: CMakeLists.txt  Config.h  GPIO.cpp  GPIO.h  HardI2C.cpp  HardI2C.h  HardSPI.cpp  HardSPI.h  SoftI2C.h  SoftSPI.h  concept.h
Components/: Count.h  Detect.h  Format.h  Manager.h  RingBuffer.h
Math/Matrix/: Matrix.hpp
Math/Matrix/Config/: Config.h  Platform.h
Math/Quaternion/: Quaternion.hpp
